syntax = "proto3";
package m2g.pb;

enum KeyType {
  // Default buttons
  NO_KEY = 0;
  PAUSE = 1;
  CONSOLE = 2;
  BACKSPACE = 3;
  RETURN = 4;
  ZOOM_OUT = 5;
  ZOOM_IN = 6;
  MOVE_UP = 7;
  MOVE_DOWN = 8;
  MOVE_LEFT = 9;
  MOVE_RIGHT = 10;
}
